Revert "Fix layers overlap and cutting at edges. (#85724)"
This reverts commit 74ffa7942a107b9cfc45525e508ac601b79aacc1.

--- a/src/vs/workbench/browser/parts/sidebar/media/sidebarpart.css
+++ b/src/vs/workbench/browser/parts/sidebar/media/sidebarpart.css
@@ -17,7 +17,9 @@
 	transform: translate3d(0px, 0px, 0px);
 }
 
-
+.monaco-workbench .part.sidebar > .content {
+	overflow: hidden;
+}
 
 .monaco-workbench.nosidebar > .part.sidebar {
 	display: none !important;
